# Rythe-Application

./: CMakeLists.txt  README.md  build-application.lua  include-application.lua
.github/workflows/: build.yml
applications/sandbox/: CMakeLists.txt  main.cpp
src/application/: application.hpp  build-application.lua  include-application.lua
src/application/context/: contexthelper.cpp  contexthelper.hpp
src/application/events/: inputevents.hpp  windowevents.hpp  windowinputevents.hpp
src/application/input/: inputmap.hpp  inputsystem.cpp  inputsystem.hpp
src/application/module/: applicationmodule.hpp
src/application/window/: window.cpp  window.hpp  windowsystem.cpp  windowsystem.hpp
